style.css
@font-face {
  font-family: 'zabars';
  src: url('fonts/zabars.ttf') format('truetype');
}

/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #888;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

body {
  font-family: 'zabars', Arial, Helvetica, sans-serif;
  background: url('img/10_other/canyon_bg.png') no-repeat center center fixed;
  background-size: cover;
  margin: 0px;
  width: 100%;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

canvas {
  display: block;
  background-color: black;
}

h1 {
  font-size: 64px;
  letter-spacing: 3px;
  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
  margin: 5px 5px 5px 5px;
}

h2 {
  font-size: 28px;
  letter-spacing: 3px;
  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
  margin: 5px 5px 5px 5px;
}

:fullscreen {
  background-color: black;
  padding: 10%;
  box-sizing: border-box;
}

.fullscreen-size {
  height: 67vh !important;
  width: 100% !important;
}

.d-none {
  display: none;
}

.img-button {
  width: 30px;
  height: 30px;
  margin: 0px 10px 0px 10px;
  cursor: pointer;
}

.img-button:hover {
  scale: 1.1;
}

.img-keyboard-img {
  width: 40px;
  height: 40px;
  text-align: center;
}

.main-container {
  position: relative;
  max-width: 720px;
  max-height: 480px;
  display: block;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.button-container {
  position: absolute;
  left:0;
  bottom: 0;
  width: 100%;
  height: 10%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.4);
  z-index: 10;
}

.rotate-screen {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: url('img/10_other/canyon_bg.png') no-repeat center center fixed;
  background-size: cover;
  z-index: 9999;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.rotate-screen img {
  width: 300px;
}

.screen {
  width: 100%;
  height: 100%;
  animation: zoomIn 500ms ease-in-out;
  z-index: 2;
}

.screen img {
  width: 100%;
  height: 100%;
}

.info-screen {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-family: Helvetica, sans-serif;
  background: linear-gradient(-45deg, rgba(238, 119, 82, 0.7), rgba(231, 185, 60, 0.7), rgba(213, 35, 35, 0.7), rgba(213, 35, 35, 0.7));
}

.info-controlls {
  display: flex;
  justify-content: space-between;
  gap: 20px;
}

.info-controlls-child {
  display: flex;
  flex-direction: column;
}

.container-center {
  display: flex;
  justify-content: center;
  text-align: center;
}

.game-rules {
  margin: 0px 64px 16px 64px;
}

.pos-abs {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 3;
}

.loader {
  display: flex;
  flex-direction: column-reverse;
  justify-content: center;
  align-items: center;
  background: linear-gradient(-45deg, rgba(238, 119, 82, 0.7), rgba(231, 185, 60, 0.7), rgba(213, 35, 35, 0.7), rgba(213, 35, 35, 0.7));
  transition: opacity 0, 75s, visibility 0.75s;
  z-index: 50;
}

.loader span {
  margin-top: 16px;
  font-size: 32px;
}

.loader-hidden {
  opacity: 0;
  visibility: hidden;
}

.loader::after {
  content: "";
  width: 75px;
  height: 75px;
  border: 15px solid #dddddd;
  border-top-color: rgb(114, 42, 13);
  border-radius: 50%;
  animation: loading 0.75s ease infinite;
}

@keyframes zoomIn {
  from {
    transform: scale(0);
  }

  to {
    transform: scale(1);
  }
}

@keyframes loading {
  from {
    transform: rotate(0turn);
  }

  to {
    transform: rotate(1turn);
  }
}

@media only screen and (max-width: 720px) {
  canvas {
    width: 100%;
  }

  h1 {
    display: none;
  } 

  .main-container {
    max-width: 100%;
    max-height: 100%;
    aspect-ratio: 720 / 480;
  }
}

@media only screen and (max-height: 480px) {
  canvas {
    height: 100vh;
  }

  h1 {
    display: none;
  } 

  .main-container {
    max-width: 100%;
    max-height: 100%;
    aspect-ratio: 720 / 480;
  }
}

